fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .appContainer{
   background-color: #ffeadc;
-  overflow-x: hidden;
 }
 .appContainer {
   margin: 0;
